# CeramicGo

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml
deploy/docker/backend/: Dockerfile
src/apps/bot/: apps.py  config.py  handlers.py  keyboards.py  state.py  utils.py  webhook.py
src/apps/bot/management/commands/: set_webhook.py  start_bot.py
src/apps/products/: admin.py  models.py
src/apps/products/migrations/: 0001_initial.py  0002_initial.py  0003_alter_productinventoryoperation_options_and_more.py  0004_alter_product_name_and_more.py  0005_productinventoryoperation_user_name.py
src/apps/users/: admin.py  models.py
src/apps/users/migrations/: 0001_initial.py  0002_botuser.py
src/core/: urls.py
src/core/settings/: base.py  development.py  production.py
